# mbw-app/src/test/resources/openapi/api-docs.snapshot.json
@@ -25,6 +25,34 @@
         }
       }
     },
+    "/api/v1/auth/login-by-phone-sms" : {
+      "post" : {
+        "tags" : [ "auth-controller" ],
+        "operationId" : "loginByPhoneSms",
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/LoginByPhoneSmsRequest"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/LoginResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/accounts/register-by-phone" : {
       "post" : {
         "tags" : [ "account-register-controller" ],
@@ -62,9 +90,43 @@
           "phone" : {
             "type" : "string",
             "minLength" : 1
+          },
+          "purpose" : {
+            "type" : "string",
+            "enum" : [ "REGISTER", "LOGIN" ]
           }
         },
         "required" : [ "phone" ]
+      },
+      "LoginByPhoneSmsRequest" : {
+        "type" : "object",
+        "properties" : {
+          "phone" : {
+            "type" : "string",
+            "minLength" : 1
+          },
+          "code" : {
+            "type" : "string",
+            "minLength" : 1,
+            "pattern" : "^\\d{6}$"
+          }
+        },
+        "required" : [ "code", "phone" ]
+      },
+      "LoginResponse" : {
+        "type" : "object",
+        "properties" : {
+          "accountId" : {
+            "type" : "integer",
+            "format" : "int64"
+          },
+          "accessToken" : {
+            "type" : "string"
+          },
+          "refreshToken" : {
+            "type" : "string"
+          }
+        }
       },
       "RegisterByPhoneRequest" : {
         "type" : "object",
